--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@testing-library/react": "^14.0.0",
     "@types/styled-components": "^5.1.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,9 +18,10 @@
     "react-router-dom": "^6.16.0",
     "styled-components": "^6.0.8"
   },
+
   "devDependencies": {
     "@types/node": "^20.6.2",
-    "@types/react": "^18.2.15",
+    "@types/react": "~18.0.6",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
