--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@testing-library/react": "^14.0.0",
     "@types/styled-components": "^5.1.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,8 +17,10 @@
     "react-router-dom": "^6.16.0",
     "styled-components": "^6.0.8"
   },
-
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.5",
     "@types/node": "^20.6.2",
     "@types/react": "~18.0.6",
     "@types/react-dom": "^18.2.7",
@@ -30,7 +31,9 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2",
     "vite": "^4.4.5"
   }
 }
