--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
