--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.27",
+    "axios": "^1.6.2",
     "babel-jest": "^29.7.0",
     "eslint-plugin-jest": "^27.4.2",
     "jest-environment-jsdom": "^29.7.0",
